# teapot

./: .editorconfig  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/teapot/http/headers/: trait.TypedHeader.js
src/: lib.rs  macros.rs  media_type.rs  mime.rs
src/http/: headers.rs  lines.rs  message.rs  mod.rs  status.rs
src/http/parse/: headers.rs  mod.rs
src/teapot/: lib.rs.html  macros.rs.html  mime.rs.html
src/teapot/http/: headers.rs.html  lines.rs.html  message.rs.html  mod.rs.html  status.rs.html
src/teapot/http/parse/: headers.rs.html  mod.rs.html
teapot/: index.html  macro.try_to_opt.html  sidebar-items.js  try_to_opt.m.html
teapot/http/: index.html  sidebar-items.js
teapot/http/headers/: Dnt.t.html  DntHeader.t.html  RawHeader.t.html  UserAgentHeader.t.html  enum.Dnt.html  index.html  sidebar-items.js  struct.DntHeader.html  struct.Headers.html  struct.RawHeader.html  struct.UserAgentHeader.html  trait.TypedHeader.html
teapot/http/message/: enum.ParseError.html  index.html  sidebar-items.js  struct.Message.html
teapot/http/status/: enum.StatusClass.html  enum.StatusCode.html  index.html  sidebar-items.js
teapot/mime/: Mime.t.html  index.html  sidebar-items.js  trait.Mime.html
