[package]
name = "teapot"
description = "[WIP] HTTP/1.1 parser and serializer"
version = "0.1.1"
authors = ["Ruben Schmidmeister <ruben.schmidmeister@icloud.com>"]
repository = "https://github.com/bash/teapot"
documentation = "https://www.rubys.ninja/teapot/teapot"
readme = "README.md"
license = "AGPL-3.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md"
]

[badges]
travis-ci = { repository = "bash/teapot", branch = "master" }

[dependencies]
